cloud/k8s/base/namespace-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: houston-system
  labels:
    houston.ai/component: control-plane
    kubernetes.io/metadata.name: houston-system
